# mrs_automated_statistical_testing

./: CMakeLists.txt  package.xml
test/: compile_tests.sh
test/test1/: CMakeLists.txt  test.cpp  test1.test
test/test1/config/: custom_config.yaml  mrs_simulator.yaml  world_config.yaml
