<?xml version="1.0"?>
<package format="2">

  <name>mrs_automated_statistical_testing</name>
  <version>1.0.0</version>
  <description>The mrs_automated_statistical_testing package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>rostest</depend>
  <depend>mrs_uav_testing</depend>

  <export>
  </export>

</package>
